Eevee render inconsistency between 3D View, Viewport render, and F12 Render #65761

Closed
opened 2019-06-12 16:52:10 +02:00 by Kent Trammell · 10 comments

System Information
Operating system: Linux Deepin 15, Kernel 4.15.0
Graphics card: GeForce RTX 2080

Blender Version
Broken: version: 2.80, branch: blender2.7, commit date: 2019-06-11 21:45, hash: d93a7290e5
Worked: (optional)

Short description of error
Eevee result is inconsistent between 3D View, Viewport rendering, and F12 Rendering. In this character example, the eye's are different in each. I've gone through my regular regimen of troubleshooting, making sure visibility toggles are consistent in the outliner and that render settings are setup properly. Nothing has fixed it and the difference between 3D view and Viewport rendering especially makes me think this is a bug.
Eevee_render-inconsistency-in-eyes.jpg

Exact steps for others to reproduce the error
eevee_inconsitent_rendering_bug.blend

  1. Open the attached .blend file
  2. Perform viewport render
  3. Advance 1 slot and perform an F12 render.
  4. Note the differences between these renders and the 3D view
**System Information** Operating system: Linux Deepin 15, Kernel 4.15.0 Graphics card: GeForce RTX 2080 **Blender Version** Broken: version: 2.80, branch: blender2.7, commit date: 2019-06-11 21:45, hash: d93a7290e506 Worked: (optional) **Short description of error** Eevee result is inconsistent between 3D View, Viewport rendering, and F12 Rendering. In this character example, the eye's are different in each. I've gone through my regular regimen of troubleshooting, making sure visibility toggles are consistent in the outliner and that render settings are setup properly. Nothing has fixed it and the difference between 3D view and Viewport rendering especially makes me think this is a bug. ![Eevee_render-inconsistency-in-eyes.jpg](https://archive.blender.org/developer/F7100381/Eevee_render-inconsistency-in-eyes.jpg) **Exact steps for others to reproduce the error** [eevee_inconsitent_rendering_bug.blend](https://archive.blender.org/developer/F7100340/eevee_inconsitent_rendering_bug.blend) 1. Open the attached .blend file 2. Perform viewport render 3. Advance 1 slot and perform an F12 render. 4. Note the differences between these renders and the 3D view
Author

Added subscriber: @theluthier

Added subscriber: @theluthier

Added subscriber: @tomjk

Added subscriber: @tomjk

That's a large file! Could you try removing extraneous things from it so that it's just the bare minimum necessary to replicate the problem? (eg. ideally your file would just be the eyes and associated material/texture.)

That's a large file! Could you try removing extraneous things from it so that it's just the bare minimum necessary to replicate the problem? (eg. *ideally* your file would just be the eyes and associated material/texture.)

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Right, try to strip out as much as you can from that file so that it is a minimal example of the issue.

Right, try to strip out as much as you can from that file so that it is a minimal example of the issue.

Added subscriber: @soderlind

Added subscriber: @soderlind

I've made a simple file that I believe shows the same issue as with the eyes in the bugreporters first post. It's a monkey inside a refractive sphere.

The issue can also be seen in the viewport. If you change from solid to rendered view, it's almost as if the brighter parts of the refracted background hdri is drawn in front of the monkey until you do something that redraws the view. Like panning the view a bit, or hover the cursor over the move, zoom or view rotation gizmo. (Is it even supposed to redraw view just by hovering over those gizmos?).

First time you choose rendered view it looks ok for me so you might need to go to solid and back to rendered again before it happens. Pressing f12 to render you can see the same error. I also noticed the more samples you use the less pronounced the error is. Like it fades away a tiny bit with every sample.

Operating system: Windows 7 64-bit
Graphics card: GeForce GTX 1060 6GB

EeveeRefractionTest.blend

EeveeRefractionTest.mp4

I've made a simple file that I believe shows the same issue as with the eyes in the bugreporters first post. It's a monkey inside a refractive sphere. The issue can also be seen in the viewport. If you change from solid to rendered view, it's almost as if the brighter parts of the refracted background hdri is drawn in front of the monkey until you do something that redraws the view. Like panning the view a bit, or hover the cursor over the move, zoom or view rotation gizmo. (Is it even supposed to redraw view just by hovering over those gizmos?). First time you choose rendered view it looks ok for me so you might need to go to solid and back to rendered again before it happens. Pressing f12 to render you can see the same error. I also noticed the more samples you use the less pronounced the error is. Like it fades away a tiny bit with every sample. Operating system: Windows 7 64-bit Graphics card: GeForce GTX 1060 6GB [EeveeRefractionTest.blend](https://archive.blender.org/developer/F7299693/EeveeRefractionTest.blend) [EeveeRefractionTest.mp4](https://archive.blender.org/developer/F7299758/EeveeRefractionTest.mp4)
Clément Foucault was assigned by Sebastian Parborg 2019-06-20 12:13:17 +02:00

Added subscriber: @ssendam

Added subscriber: @ssendam

This issue was referenced by 986ff461fb

This issue was referenced by 986ff461fb7ff361f5fb1e5aab49e4f8892258e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65761
No description provided.