Fix T65761 Eevee: SSRefraction not working on first sample

There is no reason to disable the refraction on the first sample like SSR
does.

This was caussing issues when rendering.